# jni_protobuf_demo

./: .gitignore  CMakeLists.txt  README.md  build_android_arm32.bat  build_protobuf.bat
source/: main.cpp
source/proto/: tutorial.pb.cc  tutorial.pb.h
